<resources>
    <string name="app_name">KotlinFirebase</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Insira seu email</string>
    <string name="senha">Insira sua senha</string>
    <string name="login">Login</string>
    <string name="signUpText">Registre-se</string>
    <string name="registerBtn">Registrar</string>
    <string name="loginIndicator">Logado!</string>
    <string name="btnLogout">Logout</string>
</resources>