<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10sp"
        android:autofillHints=""
        android:background="#AAADBF"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#253040"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/loginSenha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10sp"
        android:autofillHints=""
        android:background="#AAADBF"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#253040"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#3F51B5"
        android:text="@string/login"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/signUpText"
        android:textColor="@color/white" />

</LinearLayout>